Fix referee, pitch, vm modal overflow

--- a/components/Sportsmapp/VenueManagerModal/venuesmodal.module.scss
+++ b/components/Sportsmapp/VenueManagerModal/venuesmodal.module.scss
@@ -14,4 +14,7 @@
   gap: 20px;
   justify-content: start; /* Aligns the items to the start of the grid area */
   width: 100%;
+  overflow: auto;
+  height: 80vh;
+  padding: 10px;
 }
